// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details Component Initial state should render details 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DetailsPage>
    <ForwardRef(IonPage)>
      <IonPage
        forwardedRef={null}
      >
        <div
          className="ion-page"
        >
          <SimpleHeader
            goBack={true}
            title="Details"
          >
            <ForwardRef(IonHeader)>
              <IonHeader
                forwardedRef={null}
              >
                <ion-header>
                  <ForwardRef(IonToolbar)
                    color="scotia-red"
                  >
                    <IonToolbar
                      color="scotia-red"
                      forwardedRef={null}
                    >
                      <ion-toolbar
                        color="scotia-red"
                      >
                        <ForwardRef(IonGrid)>
                          <IonGrid
                            forwardedRef={null}
                          >
                            <ion-grid>
                              <ForwardRef(IonRow)
                                className="ion-justify-content-between"
                              >
                                <IonRow
                                  className="ion-justify-content-between"
                                  forwardedRef={null}
                                >
                                  <ion-row>
                                    <FontAwesomeIcon
                                      border={false}
                                      className="go-back-icon"
                                      fixedWidth={false}
                                      flip={null}
                                      icon={
                                        Object {
                                          "icon": Array [
                                            256,
                                            512,
                                            Array [],
                                            "f104",
                                            "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
                                          ],
                                          "iconName": "angle-left",
                                          "prefix": "fas",
                                        }
                                      }
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      onClick={[Function]}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size="lg"
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-angle-left fa-w-8 fa-lg go-back-icon"
                                        data-icon="angle-left"
                                        data-prefix="fas"
                                        focusable="false"
                                        onClick={[Function]}
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 256 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                    <ForwardRef(IonLabel)>
                                      <IonLabel
                                        forwardedRef={null}
                                      >
                                        <ion-label>
                                          Details
                                        </ion-label>
                                      </IonLabel>
                                    </ForwardRef(IonLabel)>
                                    <ForwardRef(IonButton)
                                      className="logout-button"
                                      color="light"
                                      fill="outline"
                                      onClick={[Function]}
                                      shape="round"
                                      size="small"
                                    >
                                      <IonButton
                                        className="logout-button"
                                        color="light"
                                        fill="outline"
                                        forwardedRef={null}
                                        onClick={[Function]}
                                        shape="round"
                                        size="small"
                                      >
                                        <ion-button
                                          color="light"
                                          fill="outline"
                                          onClick={[Function]}
                                          shape="round"
                                          size="small"
                                        >
                                          Logout
                                        </ion-button>
                                      </IonButton>
                                    </ForwardRef(IonButton)>
                                  </ion-row>
                                </IonRow>
                              </ForwardRef(IonRow)>
                            </ion-grid>
                          </IonGrid>
                        </ForwardRef(IonGrid)>
                      </ion-toolbar>
                    </IonToolbar>
                  </ForwardRef(IonToolbar)>
                </ion-header>
              </IonHeader>
            </ForwardRef(IonHeader)>
          </SimpleHeader>
          <ForwardRef(IonContent)>
            <IonContent
              forwardedRef={null}
            >
              <ion-content>
                <ForwardRef(IonList)
                  className="movements-list"
                >
                  <IonList
                    className="movements-list"
                    forwardedRef={null}
                  >
                    <ion-list>
                      <ForwardRef(IonItem)
                        key="2"
                      >
                        <IonItem
                          forwardedRef={null}
                        >
                          <ion-item
                            onClick={[Function]}
                          >
                            <MovementCard
                              accountId={1}
                              description="black"
                              id="2"
                              transactionAmount="-377.30"
                              transactionDate="2020-12-27T16:52:12.129Z"
                            >
                              <div
                                className="movement-card__container ion-padding"
                              >
                                <ForwardRef(IonGrid)>
                                  <IonGrid
                                    forwardedRef={null}
                                  >
                                    <ion-grid>
                                      <ForwardRef(IonRow)>
                                        <IonRow
                                          forwardedRef={null}
                                        >
                                          <ion-row>
                                            <ForwardRef(IonCol)
                                              size="4"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="4"
                                              >
                                                <ion-col
                                                  size="4"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="danger"
                                                        >
                                                          <IonNote
                                                            color="danger"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="danger"
                                                            >
                                                              debit
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                            <ForwardRef(IonCol)
                                              size="8"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="8"
                                              >
                                                <ion-col
                                                  size="8"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              2020-12-27
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="danger"
                                                        >
                                                          <IonNote
                                                            color="danger"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="danger"
                                                            >
                                                               
                                                              -COP 377.00
                                                               
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              black
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                          </ion-row>
                                        </IonRow>
                                      </ForwardRef(IonRow)>
                                    </ion-grid>
                                  </IonGrid>
                                </ForwardRef(IonGrid)>
                              </div>
                            </MovementCard>
                          </ion-item>
                        </IonItem>
                      </ForwardRef(IonItem)>
                      <ForwardRef(IonItem)
                        key="1"
                      >
                        <IonItem
                          forwardedRef={null}
                        >
                          <ion-item
                            onClick={[Function]}
                          >
                            <MovementCard
                              accountId={1}
                              description="24/365 payment"
                              id="1"
                              transactionAmount="84.22"
                              transactionDate="2020-12-26T04:44:15.582Z"
                            >
                              <div
                                className="movement-card__container ion-padding"
                              >
                                <ForwardRef(IonGrid)>
                                  <IonGrid
                                    forwardedRef={null}
                                  >
                                    <ion-grid>
                                      <ForwardRef(IonRow)>
                                        <IonRow
                                          forwardedRef={null}
                                        >
                                          <ion-row>
                                            <ForwardRef(IonCol)
                                              size="4"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="4"
                                              >
                                                <ion-col
                                                  size="4"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="success"
                                                        >
                                                          <IonNote
                                                            color="success"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="success"
                                                            >
                                                              credit
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                            <ForwardRef(IonCol)
                                              size="8"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="8"
                                              >
                                                <ion-col
                                                  size="8"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              2020-12-25
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="success"
                                                        >
                                                          <IonNote
                                                            color="success"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="success"
                                                            >
                                                               
                                                              COP 84.00
                                                               
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              24/365 payment
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                          </ion-row>
                                        </IonRow>
                                      </ForwardRef(IonRow)>
                                    </ion-grid>
                                  </IonGrid>
                                </ForwardRef(IonGrid)>
                              </div>
                            </MovementCard>
                          </ion-item>
                        </IonItem>
                      </ForwardRef(IonItem)>
                      <ForwardRef(IonItem)
                        key="3"
                      >
                        <IonItem
                          forwardedRef={null}
                        >
                          <ion-item
                            onClick={[Function]}
                          >
                            <MovementCard
                              accountId={1}
                              description="middleware sky blue"
                              id="3"
                              transactionAmount="641.09"
                              transactionDate="2020-12-20T08:14:47.864Z"
                            >
                              <div
                                className="movement-card__container ion-padding"
                              >
                                <ForwardRef(IonGrid)>
                                  <IonGrid
                                    forwardedRef={null}
                                  >
                                    <ion-grid>
                                      <ForwardRef(IonRow)>
                                        <IonRow
                                          forwardedRef={null}
                                        >
                                          <ion-row>
                                            <ForwardRef(IonCol)
                                              size="4"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="4"
                                              >
                                                <ion-col
                                                  size="4"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="success"
                                                        >
                                                          <IonNote
                                                            color="success"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="success"
                                                            >
                                                              credit
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                            <ForwardRef(IonCol)
                                              size="8"
                                            >
                                              <IonCol
                                                forwardedRef={null}
                                                size="8"
                                              >
                                                <ion-col
                                                  size="8"
                                                >
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              2020-12-20
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonNote)
                                                          color="success"
                                                        >
                                                          <IonNote
                                                            color="success"
                                                            forwardedRef={null}
                                                          >
                                                            <ion-note
                                                              color="success"
                                                            >
                                                               
                                                              COP 641.00
                                                               
                                                            </ion-note>
                                                          </IonNote>
                                                        </ForwardRef(IonNote)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                  <ForwardRef(IonRow)>
                                                    <IonRow
                                                      forwardedRef={null}
                                                    >
                                                      <ion-row>
                                                        <ForwardRef(IonLabel)>
                                                          <IonLabel
                                                            forwardedRef={null}
                                                          >
                                                            <ion-label>
                                                              middleware sky blue
                                                            </ion-label>
                                                          </IonLabel>
                                                        </ForwardRef(IonLabel)>
                                                      </ion-row>
                                                    </IonRow>
                                                  </ForwardRef(IonRow)>
                                                </ion-col>
                                              </IonCol>
                                            </ForwardRef(IonCol)>
                                          </ion-row>
                                        </IonRow>
                                      </ForwardRef(IonRow)>
                                    </ion-grid>
                                  </IonGrid>
                                </ForwardRef(IonGrid)>
                              </div>
                            </MovementCard>
                          </ion-item>
                        </IonItem>
                      </ForwardRef(IonItem)>
                    </ion-list>
                  </IonList>
                </ForwardRef(IonList)>
                <ForwardRef
                  isOpen={false}
                  message="fetching your movements..."
                >
                  <IonLoading
                    forwardedRef={null}
                    isOpen={false}
                    message="fetching your movements..."
                  />
                </ForwardRef>
              </ion-content>
            </IonContent>
          </ForwardRef(IonContent)>
        </div>
      </IonPage>
    </ForwardRef(IonPage)>
  </DetailsPage>
</Provider>
`;

exports[`Details Component Initial state should render error 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DetailsPage>
    <ForwardRef(IonPage)>
      <IonPage
        forwardedRef={null}
      >
        <div
          className="ion-page"
        >
          <SimpleHeader
            goBack={true}
            title="Details"
          >
            <ForwardRef(IonHeader)>
              <IonHeader
                forwardedRef={null}
              >
                <ion-header>
                  <ForwardRef(IonToolbar)
                    color="scotia-red"
                  >
                    <IonToolbar
                      color="scotia-red"
                      forwardedRef={null}
                    >
                      <ion-toolbar
                        color="scotia-red"
                      >
                        <ForwardRef(IonGrid)>
                          <IonGrid
                            forwardedRef={null}
                          >
                            <ion-grid>
                              <ForwardRef(IonRow)
                                className="ion-justify-content-between"
                              >
                                <IonRow
                                  className="ion-justify-content-between"
                                  forwardedRef={null}
                                >
                                  <ion-row>
                                    <FontAwesomeIcon
                                      border={false}
                                      className="go-back-icon"
                                      fixedWidth={false}
                                      flip={null}
                                      icon={
                                        Object {
                                          "icon": Array [
                                            256,
                                            512,
                                            Array [],
                                            "f104",
                                            "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
                                          ],
                                          "iconName": "angle-left",
                                          "prefix": "fas",
                                        }
                                      }
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      onClick={[Function]}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size="lg"
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-angle-left fa-w-8 fa-lg go-back-icon"
                                        data-icon="angle-left"
                                        data-prefix="fas"
                                        focusable="false"
                                        onClick={[Function]}
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 256 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                    <ForwardRef(IonLabel)>
                                      <IonLabel
                                        forwardedRef={null}
                                      >
                                        <ion-label>
                                          Details
                                        </ion-label>
                                      </IonLabel>
                                    </ForwardRef(IonLabel)>
                                    <ForwardRef(IonButton)
                                      className="logout-button"
                                      color="light"
                                      fill="outline"
                                      onClick={[Function]}
                                      shape="round"
                                      size="small"
                                    >
                                      <IonButton
                                        className="logout-button"
                                        color="light"
                                        fill="outline"
                                        forwardedRef={null}
                                        onClick={[Function]}
                                        shape="round"
                                        size="small"
                                      >
                                        <ion-button
                                          color="light"
                                          fill="outline"
                                          onClick={[Function]}
                                          shape="round"
                                          size="small"
                                        >
                                          Logout
                                        </ion-button>
                                      </IonButton>
                                    </ForwardRef(IonButton)>
                                  </ion-row>
                                </IonRow>
                              </ForwardRef(IonRow)>
                            </ion-grid>
                          </IonGrid>
                        </ForwardRef(IonGrid)>
                      </ion-toolbar>
                    </IonToolbar>
                  </ForwardRef(IonToolbar)>
                </ion-header>
              </IonHeader>
            </ForwardRef(IonHeader)>
          </SimpleHeader>
          <ForwardRef(IonContent)>
            <IonContent
              forwardedRef={null}
            >
              <ion-content>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      This account does not have movements
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      error details test
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef
                  isOpen={false}
                  message="fetching your movements..."
                >
                  <IonLoading
                    forwardedRef={null}
                    isOpen={false}
                    message="fetching your movements..."
                  />
                </ForwardRef>
              </ion-content>
            </IonContent>
          </ForwardRef(IonContent)>
        </div>
      </IonPage>
    </ForwardRef(IonPage)>
  </DetailsPage>
</Provider>
`;

exports[`Details Component Initial state should render with no details 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <DetailsPage>
    <ForwardRef(IonPage)>
      <IonPage
        forwardedRef={null}
      >
        <div
          className="ion-page"
        >
          <SimpleHeader
            goBack={true}
            title="Details"
          >
            <ForwardRef(IonHeader)>
              <IonHeader
                forwardedRef={null}
              >
                <ion-header>
                  <ForwardRef(IonToolbar)
                    color="scotia-red"
                  >
                    <IonToolbar
                      color="scotia-red"
                      forwardedRef={null}
                    >
                      <ion-toolbar
                        color="scotia-red"
                      >
                        <ForwardRef(IonGrid)>
                          <IonGrid
                            forwardedRef={null}
                          >
                            <ion-grid>
                              <ForwardRef(IonRow)
                                className="ion-justify-content-between"
                              >
                                <IonRow
                                  className="ion-justify-content-between"
                                  forwardedRef={null}
                                >
                                  <ion-row>
                                    <FontAwesomeIcon
                                      border={false}
                                      className="go-back-icon"
                                      fixedWidth={false}
                                      flip={null}
                                      icon={
                                        Object {
                                          "icon": Array [
                                            256,
                                            512,
                                            Array [],
                                            "f104",
                                            "M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z",
                                          ],
                                          "iconName": "angle-left",
                                          "prefix": "fas",
                                        }
                                      }
                                      inverse={false}
                                      listItem={false}
                                      mask={null}
                                      onClick={[Function]}
                                      pull={null}
                                      pulse={false}
                                      rotation={null}
                                      size="lg"
                                      spin={false}
                                      swapOpacity={false}
                                      symbol={false}
                                      title=""
                                      transform={null}
                                    >
                                      <svg
                                        aria-hidden="true"
                                        className="svg-inline--fa fa-angle-left fa-w-8 fa-lg go-back-icon"
                                        data-icon="angle-left"
                                        data-prefix="fas"
                                        focusable="false"
                                        onClick={[Function]}
                                        role="img"
                                        style={Object {}}
                                        viewBox="0 0 256 512"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M31.7 239l136-136c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9L127.9 256l96.4 96.4c9.4 9.4 9.4 24.6 0 33.9L201.7 409c-9.4 9.4-24.6 9.4-33.9 0l-136-136c-9.5-9.4-9.5-24.6-.1-34z"
                                          fill="currentColor"
                                          style={Object {}}
                                        />
                                      </svg>
                                    </FontAwesomeIcon>
                                    <ForwardRef(IonLabel)>
                                      <IonLabel
                                        forwardedRef={null}
                                      >
                                        <ion-label>
                                          Details
                                        </ion-label>
                                      </IonLabel>
                                    </ForwardRef(IonLabel)>
                                    <ForwardRef(IonButton)
                                      className="logout-button"
                                      color="light"
                                      fill="outline"
                                      onClick={[Function]}
                                      shape="round"
                                      size="small"
                                    >
                                      <IonButton
                                        className="logout-button"
                                        color="light"
                                        fill="outline"
                                        forwardedRef={null}
                                        onClick={[Function]}
                                        shape="round"
                                        size="small"
                                      >
                                        <ion-button
                                          color="light"
                                          fill="outline"
                                          onClick={[Function]}
                                          shape="round"
                                          size="small"
                                        >
                                          Logout
                                        </ion-button>
                                      </IonButton>
                                    </ForwardRef(IonButton)>
                                  </ion-row>
                                </IonRow>
                              </ForwardRef(IonRow)>
                            </ion-grid>
                          </IonGrid>
                        </ForwardRef(IonGrid)>
                      </ion-toolbar>
                    </IonToolbar>
                  </ForwardRef(IonToolbar)>
                </ion-header>
              </IonHeader>
            </ForwardRef(IonHeader)>
          </SimpleHeader>
          <ForwardRef(IonContent)>
            <IonContent
              forwardedRef={null}
            >
              <ion-content>
                <ForwardRef(IonLabel)>
                  <IonLabel
                    forwardedRef={null}
                  >
                    <ion-label>
                      This account does not have movements
                    </ion-label>
                  </IonLabel>
                </ForwardRef(IonLabel)>
                <ForwardRef
                  isOpen={false}
                  message="fetching your movements..."
                >
                  <IonLoading
                    forwardedRef={null}
                    isOpen={false}
                    message="fetching your movements..."
                  />
                </ForwardRef>
              </ion-content>
            </IonContent>
          </ForwardRef(IonContent)>
        </div>
      </IonPage>
    </ForwardRef(IonPage)>
  </DetailsPage>
</Provider>
`;
